--- a/api/package.json
+++ b/api/package.json
@@ -13,50 +13,48 @@
     "typeorm": "tsed typeorm"
   },
   "dependencies": {
-    "@tsed/ajv": "5.60.2",
-    "@tsed/common": "5.60.2",
-    "@tsed/core": "5.60.2",
-    "@tsed/di": "5.60.2",
-    "@tsed/exceptions": "5.60.2",
-    "@tsed/platform-express": "5.60.2",
-    "@tsed/swagger": "^5.60.2",
-    "@tsed/typeorm": "5.60.2",
-    "@types/swagger-schema-official": "^2.0.21",
-    "ajv": "6.12.3",
-    "bcrypt": "^5.0.0",
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "concurrently": "5.2.0",
-    "cookie-parser": "1.4.5",
-    "cors": "2.8.5",
-    "cross-env": "7.0.2",
-    "express": "4.17.1",
-    "helmet": "^3.23.3",
+    "@tsed/ajv": "^6.114.16",
+    "@tsed/common": "^6.114.16",
+    "@tsed/core": "^6.114.16",
+    "@tsed/di": "^6.114.16",
+    "@tsed/exceptions": "^6.114.16",
+    "@tsed/platform-express": "^6.114.16",
+    "@tsed/swagger": "^6.114.16",
+    "@tsed/typeorm": "^6.114.16",
+    "@types/swagger-schema-official": "^2.0.22",
+    "ajv": "^8.11.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "method-override": "3.0.0",
-    "sqlite3": "5.0.0",
-    "typeorm": "0.2.25"
+    "method-override": "^3.0.0",
+    "sqlite3": "^5.0.8",
+    "typeorm": "^0.2.26"
   },
   "devDependencies": {
-    "@tsed/cli-plugin-eslint": "1.16.12",
-    "@tsed/cli-plugin-typeorm": "1.16.12",
-    "@types/bcrypt": "^3.0.0",
-    "@types/compression": "1.7.0",
-    "@types/cookie-parser": "1.4.2",
-    "@types/cors": "2.8.6",
-    "@types/express": "4.17.7",
-    "@types/helmet": "0.0.47",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/method-override": "0.0.31",
-    "@types/node": "14.0.20",
-    "@typescript-eslint/eslint-plugin": "3.6.0",
-    "@typescript-eslint/parser": "3.6.0",
-    "concurrently": "5.2.0",
-    "eslint": "7.4.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-prettier": "3.1.4",
-    "nodemon": "2.0.4",
-    "ts-node": "8.10.2",
-    "typescript": "3.9.6"
+    "@tsed/cli-plugin-eslint": "^3.20.17",
+    "@tsed/cli-plugin-typeorm": "^3.20.17",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/method-override": "^0.0.32",
+    "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "concurrently": "^7.2.1",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
