--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
+    "json-api-serializer": "^2.6.6",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "sqlite3": "^5.0.8",
@@ -44,6 +45,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/json-api-serializer": "^2.6.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/method-override": "^0.0.32",
     "@types/node": "^16.0.0",
