--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,16 +18,16 @@ FROM node:12.13.0-alpine
 RUN apk update && apk add build-base git python
 
 COPY package.json .
-COPY yarn.lock .
+COPY package-lock.json .
 COPY ./src ./src
 COPY ./dist ./dist
 COPY ./resources ./resources
 COPY ./spec ./spec
 
-RUN yarn install --production
+RUN npm ci
 
 EXPOSE 8081
 ENV PORT 8081
 ENV NODE_ENV production
 
-CMD ["yarn", "start:prod"]
+CMD ["npm", "run", "start:prod"]
