--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "yarn tsc",
+    "build": "rm -rf dist && npm run tsc && npm run copy-package",
     "tsc": "tsc --project tsconfig.compile.json",
     "tsc:w": "tsc --project tsconfig.json -w",
+    "copy-package": "cp package.json dist/package.json && cp package-lock.json dist/package-lock.json",
     "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "test:lint": "eslint src --ext .ts",
