implement vault secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,3 +55,4 @@ jobs:
           script: |
             cd www/${{ secrets.DOMAIN_STAGING }}/
             npm ci
+            secrets pull -e staging
