--- a/api/package.json
+++ b/api/package.json
@@ -30,9 +30,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "form-data": "^4.0.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgun.js": "^8.0.0",
     "method-override": "^3.0.0",
     "sqlite3": "^5.0.8",
     "typeorm": "^0.2.26"
