--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
         uses: hashicorp/vault-action@v2.4.0
         with:
           url: ${{ secrets.VAULT_ADDR }}
-          caCertificate: ${{ secrets.VAULT_CA_CERT }}
+#          caCertificate: ${{ secrets.VAULT_CA_CERT }}
           method: approle
           roleId: ${{ secrets.VAULT_ROLE_ID }}
           secretId: ${{ secrets.VAULT_SECRET_ID }}
