--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,20 @@ jobs:
           npm ci
           npm run build
 
+      - id: commit
+        uses: pr-mpt/actions-commit-hash@v1
+
+      - name: Create release folder
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DOMAIN_STAGING }}
+          username: ${{ secrets.USER_STAGING }}
+          key: ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
+          port: 229
+          script: |
+            ls -tl ~/www/${{ secrets.DOMAIN_STAGING }}/releases/ | tail -n +4 | awk '{print $9}' | xargs rm -rf {}
+            mkdir -p ~/www/${{ secrets.DOMAIN_STAGING }}/releases/${{ steps.commit.outputs.short }}
+
       - name: Copy deployment to staging
         uses: burnett01/rsync-deployments@5.2.1
         with:
@@ -56,7 +70,7 @@ jobs:
             cd www/${{ secrets.DOMAIN_STAGING }}/releases/${{ steps.commit.outputs.short }}
             npm ci
             cd ~/www/${{ secrets.DOMAIN_STAGING }}
-            ln -s releases/${{ steps.commit.outputs.short }} current
+            ln -nfs releases/${{ steps.commit.outputs.short }}/ current
 
       - name: Import Secrets
         uses: hashicorp/vault-action@v2.4.0
@@ -78,4 +92,4 @@ jobs:
           script: |
             cd www/${{ secrets.DOMAIN_STAGING }}/current/
             echo "::add-mask::${{ env.staging_secrets }}" > .env
-            passenger-config restart-app
+            passenger-config restart-app ~/www/${{ secrets.DOMAIN_STAGING }}/current
