--- a/api/.env.example
+++ b/api/.env.example
@@ -1,2 +1,5 @@
-MAILGUN_API_KEY="mySecretApiKey"
 FRONTEND_URL="http://localhost:4200"
+MAILGUN_API_KEY="<YOUR-MAILGUN-API-KEY>"
+MAILGUN_DOMAIN="js-api-onboarding.byinfinum.co"
+MAILGUN_LOGIN="postmaster@js-api-onboarding.byinfinum.co"
+MAILGUN_SMTP="smtp.eu.mailgun.org"
