--- a/api/package.json
+++ b/api/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/method-override": "^0.0.32",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
