--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "resend": "^3.2.0",
     "sqlite3": "^5.0.8",
     "typeorm": "^0.2.26"
   },
