--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build
 on:
   pull_request:
     paths-ignore:
-      - '.assets/**'
-      - '**.md'
+      - ".assets/**"
+      - "**.md"
   workflow_dispatch:
 
 concurrency:
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [16.x]
+        node: [20.x]
 
     steps:
       - name: Checkout the repo
