--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=20.11.1",
+    "npm": ">=10.2.4"
+  },
   "scripts": {
     "build": "rm -rf dist && npm run tsc && npm run copy-package",
     "tsc": "tsc --project tsconfig.compile.json",
@@ -34,6 +38,7 @@
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "resend": "^3.2.0",
     "sqlite3": "^5.0.8",
     "typeorm": "^0.2.26"
   },
@@ -48,6 +53,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/method-override": "^0.0.32",
     "@types/node": "^16.0.0",
+    "@types/react": "^18.2.74",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "concurrently": "^7.2.1",
