Fix tsconfigs issues

--- a/api/tsconfig.compile.json
+++ b/api/tsconfig.compile.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "outDir": "./dist",
     "moduleResolution": "node",
+    "composite": true,
     "declaration": true,
     "noResolve": false,
     "preserveConstEnums": true,
