--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "tsc": "tsc --project tsconfig.compile.json",
     "tsc:w": "tsc --project tsconfig.json -w",
     "copy-package": "cp package.json dist/package.json && cp package-lock.json dist/package-lock.json",
-    "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
+    "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node -r dotenv/config src/index.ts",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "test:lint": "eslint src --ext .ts",
     "test:lint:fix": "eslint src --ext .ts --fix",
@@ -24,6 +24,7 @@
     "@tsed/di": "^6.114.16",
     "@tsed/exceptions": "^6.114.16",
     "@tsed/platform-express": "^6.114.16",
+    "@tsed/schema": "^6.114.16",
     "@tsed/swagger": "^6.114.16",
     "@tsed/typeorm": "^6.114.16",
     "@types/swagger-schema-official": "^2.0.22",
@@ -38,14 +39,18 @@
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "resend": "^3.2.0",
     "sqlite3": "^5.0.8",
+    "tslib": "^2.4.0",
     "typeorm": "^0.2.26"
   },
   "devDependencies": {
     "@tsed/cli-plugin-eslint": "^3.20.17",
     "@tsed/cli-plugin-typeorm": "^3.20.17",
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
@@ -57,11 +62,13 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "concurrently": "^7.2.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
-  }
+  },
+  "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
